--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "express-session": "^1.18.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.9.7",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket.io": "^4.7.5"
   },
   "name": "node",
   "version": "1.0.0",
